--- a/arch/arm/configs/msm8916_sec_fortuna3g_eur_defconfig
+++ b/arch/arm/configs/msm8916_sec_fortuna3g_eur_defconfig
@@ -822,7 +822,7 @@ CONFIG_TOUCH_DISABLER=y
 # Qualcomm Atheros Prima WLAN module
 #
 # CONFIG_PRIMA_WLAN is not set
-CONFIG_PRONTO_WLAN=y
+CONFIG_PRONTO_WLAN=m
 CONFIG_PRIMA_WLAN_BTAMP=n
 CONFIG_QCOM_TDLS=y
 CONFIG_PRIMA_WLAN_LFR=y
