--- a/fs/Makefile
+++ b/fs/Makefile
@@ -68,7 +68,15 @@ obj-$(CONFIG_EXT2_FS)		+= ext2/
 # We place ext4 after ext2 so plain ext2 root fs's are mounted using ext2
 # unless explicitly requested by rootfstype
 obj-$(CONFIG_EXT4_FS)		+= ext4/
-obj-$(CONFIG_SDCARD_FS)  += sdcardfs/
+
+ifeq ($(CONFIG_SDCARD_FS_SEC_API_M),y)
+obj-$(CONFIG_SDCARD_FS)  += sdcardfs/mm/
+endif
+
+ifeq ($(CONFIG_SDCARD_FS_SEC_API_L),y)
+obj-$(CONFIG_SDCARD_FS)  += sdcardfs/lp/
+endif
+
 obj-$(CONFIG_JBD)		+= jbd/
 obj-$(CONFIG_JBD2)		+= jbd2/
 obj-$(CONFIG_CRAMFS)		+= cramfs/
